fixed alignment

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -9,4 +9,8 @@
 
 .content-container {
     background-color: white;
+    max-width: 1000px;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
